style.css
:root {
    --ghost-white: hsla(227, 100%, 98%, 1);
    --gunmetal: hsla(180, 7%, 16%, 1);
    --gunmetal-light: rgb(51, 54, 54);
    --gunmetal-lighter: rgb(76, 77, 77);
    --gunmetal-lightest: rgb(118, 118, 118);
    --fern-green: hsla(125, 26%, 39%, 1);
    --mountbatten-pink: hsla(287, 10%, 53%, 1);
    --silver: #d0d0d0;
    --light-pink: #ccc2d0;
    --alt-green: #bacb9c;
    --printables-orange: #fd7e14;
    --github-navy: #24292f;
}

body,
html {
    margin: 0;
    padding: 0;
}


body {
    background-color: var(--ghost-white);
    color: var(--gunmetal);
    font-family: 'League Spartan', sans-serif;
}


h1 {
    margin: 0;
    padding: 0;
}


h2 {
    margin: 0;
    padding: 0;
}

h3 {
    margin: 0;
    padding: 0;
}

h4 {
    margin: 0;
    padding: 0;
}

.topbar {
    display: flex;
    align-items: center;
}

.headshot_container {
    margin: 2vh;
    margin-left: 5vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.headshot {
    min-width: 8vh;
    min-height: 8vh;
    max-height: 10vh;
    max-width: 10vh;
    object-fit: contain;

    border-radius: 15%;
}

.title_container {
    display: flex;
    flex-direction: column;
    align-content: center;
    flex: 3;
    margin-left: 1%;
}

ul.posts {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.page_title {
    display: flex;
    flex: 1;
}

.subtitle {
    display: flex;
    flex: 1;
    color: var(--gunmetal-light);
}

a:link.link {
    color: var(--gunmetal);
    text-decoration: none;
}

a:hover.link {
    color: var(--fern-green);
    text-decoration: none;
}

a:visited.link {
    color: var(--gunmetal)
}

.nav_link {
    font-size: large;
}

.navigation {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-right: 6vh;
    gap: 1vh;
    flex-wrap: wrap;
    flex: 2;
}

.post_column {
    margin-top: 2%;
    display: flex;
    width: 80%;
}

.post_title_bar {
    padding-bottom: 0.5%;
    padding-top: 1%;
    display: flex;
    justify-content: space-between;
}

.date {
    display: flex;
    align-items: center;
    font-size: smaller;
    color: var(--gunmetal-lighter);
}

.posts {
    margin: 1vh;
    display: flex;
    flex-direction: column;
    gap: 3vh;
    width: 100%;
}

.post {
    padding: 1%;
    border-color: var(--gunmetal);
    border-radius: 1%/5%;
    flex: 1;
    flex-direction: column;
}

.post_body {
    display: flex;
    justify-content: center;
}

.post_break {
    color: var(--gunmetal);
    width: 100%;
}

h3 a:link {
    color: var(--gunmetal);
    text-decoration: none;
}



h3 a:hover {
    color: var(--fern-green);
    text-decoration: none;
}

.blurb {
    color: var(--gunmetal-light);
    font-weight: lighter;
    padding-left: 0.5%;
}

.tags {
    display: flex;
    padding-top: 0.5%;
}

.tag {
    font-size: xx-small;
    font-weight: bold;
    font-style: italic;
    margin-right: 0.5%;
    background-color: var(--alt-green);
    color: var(--gunmetal-light);
    border-radius: 20%/50%;
    padding-left: 1vh;
    padding-right: 1vh;
    padding-top: 0.5vh;
    padding-bottom: 0.5vh;
}

.page_break {
    width: 95%;
}


#footer {
    position: absolute;
    bottom: 0;
    padding-bottom: 1%;
    width: 100%;
}

.footer_bar {
    display: flex;
    align-items: center;
    justify-content: center;
}

.footer_links {
    display: flex;
    gap: 10px;
}

.footer_link {
    display: flex;
    justify-items: center;
    align-items: center;
}

.WIP {
    display: flex;
    justify-content: center;
    height: 100%;
}

#footer_link_icon_github:hover {
    fill: var(--github-navy);
}


#footer_link_icon_printables:hover {
    fill: var(--printables-orange);
}

.footer_link_icon {
    display: block;
    width: 30;
    height: 30;

}

#about_block {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    justify-content: center;
    margin-top: 5%;
}

#about_section {
    width: 80%;
}

.text_block>* {
    line-height: 2.0;
}

